// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Big ToggleSwitch 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  display: inline-block;
  height: 3.75rem;
  position: relative;
  width: 6.5625rem;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 3.75rem;
  bottom: 0;
  background-color: #C1C6CC;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c4:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(100,81,138,0.5);
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.375rem;
  background-color: #FFFFFF;
  height: 3rem;
  left: 0.375rem;
  position: absolute;
  width: 3rem;
}

.c5 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c3 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c1:focus-within {
  border-radius: 3.75rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<div
  className="c0"
  cursor="pointer"
>
  <input
    className="c1 c2"
    role="switch"
    type="checkbox"
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    />
  </div>
</div>
`;

exports[`ToggleSwitch default 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  width: 2.1875rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #C1C6CC;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c4:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(100,81,138,0.5);
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.125rem;
  background-color: #FFFFFF;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  width: 1rem;
}

.c5 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c3 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c1:focus-within {
  border-radius: 1.25rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<div
  className="c0"
  cursor="pointer"
>
  <input
    className="c1 c2"
    role="switch"
    type="checkbox"
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    />
  </div>
</div>
`;

exports[`ToggleSwitch on set to false 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  width: 2.1875rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #C1C6CC;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c4:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(100,81,138,0.5);
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.125rem;
  background-color: #FFFFFF;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  width: 1rem;
}

.c5 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c3 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c1:focus-within {
  border-radius: 1.25rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<div
  className="c0"
  cursor="pointer"
>
  <input
    aria-checked={false}
    checked={false}
    className="c1 c2"
    role="switch"
    type="checkbox"
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    />
  </div>
</div>
`;

exports[`ToggleSwitch on set to true 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  width: 2.1875rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.125rem;
  background-color: #FFFFFF;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  width: 1rem;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #9785F2;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c4:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(100,81,138,0.5);
}

.c5 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c3 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c1:focus-within {
  border-radius: 1.25rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<div
  className="c0"
  cursor="pointer"
>
  <input
    aria-checked={true}
    checked={true}
    className="c1 c2"
    role="switch"
    type="checkbox"
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    />
  </div>
</div>
`;

exports[`ToggleSwitch that is disabled 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.125rem;
  background-color: #FFFFFF;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  width: 1rem;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  width: 2.1875rem;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #9785F2;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #C1C6CC;
  left: 0;
  opacity: 0.4;
  position: absolute;
  right: 0;
  top: 0;
}

.c5 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c3 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c1:focus-within {
  border-radius: 1.25rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<div
  className="c0"
>
  <input
    aria-checked={true}
    checked={true}
    className="c1 c2"
    disabled={true}
    role="switch"
    type="checkbox"
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    />
  </div>
  <div
    className="c7"
  />
</div>
`;
